--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,33 @@
 .App {
+  display: grid;
+  box-shadow: 0 0 1rem 0 rgba(0, 0, 0, 0.2);
+  border-radius: 5px;
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+  max-width: 800px;
+  margin: 0 auto;
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  background-color: rgba(239, 233, 231, 0.1);
+}
+.App h2 {
+  font-weight: 400;
 }
 
-.App-link {
-  color: #61dafb;
+.App:before {
+  box-shadow: inset 0 0 2000px rgba(255, 255, 255, 0.5);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.App > * {
+  width: 800px;
+}
+
+@media only screen and (max-width: 1024px) {
+  .App {
+    max-width: 90vw;
   }
-  to {
-    transform: rotate(360deg);
+
+  .App > * {
+    width: 90vw;
   }
 }
+
+/*# sourceMappingURL=App.css.map */
